--- a/.github/workflows/ContosoUniversity.yml
+++ b/.github/workflows/ContosoUniversity.yml
@@ -102,7 +102,7 @@ jobs:
       - name: Deploy API
         uses: azure/webapps-deploy@v2.2.3
         with:
-          app-name: ${{ env.AZ_API_NAME }}
+          app-name: app-28918391-api
           package: api-artifact
       
       - name: Deploy APP
